--- a/NewTab/css/style.css
+++ b/NewTab/css/style.css
@@ -1,22 +1,26 @@
 html {
     background-color: #000;
+    font-family: 'Roboto', sans-serif;
+    color: #FFF;
+}
+
+body {
+    overflow: hidden;
 }
 
 .outer {
     display: table;
     position: absolute;
-    height: 100%
+    height: 100%;
     width: 100%;
 }
 
 .middle {
-    background-color: #333;
     display: table-cell;
     vertical-align: middle;
 }
 
 .inner {
-    background-color: #123;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -24,5 +28,20 @@ html {
     border-width: 4px;
     border-color: #FFF;
     color: #FFF;
-    width: 900px;
+    width: 1200px;
+}
+
+.bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.bottom_left {
+    text-align: left;
+}
+
+.bottom_right {
+    text-align: right;
 }
